// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should render CPSPageGrid 1`] = `
@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (min-width:63rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

<div
  class="c0 c1"
  dir="ltr"
>
  <div
    class="c2"
    dir="ltr"
  >
    <p>
      CPS page grid
    </p>
  </div>
</div>
`;

exports[`Grid should render CPSPageGrid with additional props 1`] = `
@supports (display:grid) {
  .c1 {
    display: block;
  }
}

@media (min-width:63rem) {
  .c0 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

<main
  class="c0"
  role="main"
>
  <div
    class="c1"
    dir="ltr"
  >
    <p>
      CPS page grid
    </p>
  </div>
</main>
`;

exports[`Grid should render Grid with columns 1`] = `
@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
  }
}

<div
  class="c0"
  dir="ltr"
>
  <div
    class="c1"
    dir="ltr"
  >
    <p>
      item spanning 2 out of 6 columns
    </p>
  </div>
</div>
`;
